# Tutorial-CMake

Ep01-GettingStarted/: CMakeLists.txt  main.cpp
Ep02-ChangingOutputDirs/: CMakeLists.txt
Ep03-CreateUseLibs/: CMakeLists.txt  console.cpp  console.hpp  main.cpp
Ep04-3rdPartyLibs/: CMakeLists.txt  main.cpp
